--- a/css/style.css
+++ b/css/style.css
@@ -1,230 +1,345 @@
-:root{
-    --primary:#c27a32;
-    --bg:#fff;
+:root {
+  --primary: #b6895b;
+  --bg: #010101;
 }
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    outline: none;
-    border: none;
-    text-decoration: none;
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  outline: none;
+  border: none;
+  text-decoration: none;
 }
-body{
-    font-family: 'Poppins', sans-serif;
-    background-color: var(--bg);
-    color: black;
-    min-height: 5000px;
+
+html {
+  scroll-behavior: smooth;
 }
+
+body {
+  font-family: 'Poppins', sans-serif;
+  background-color: var(--bg);
+  color: #fff;
+}
+
 /* Navbar */
 .navbar {
-    display: flex;
-    justify-content:space-around;
-    align-items: center;
-    padding: 1.4rem 7%;
-    background-color: var(--bg);
-    border-bottom: 1px solid #513c28;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 9999;
-}
-.navbar .navbar-logo{
-    font-size: 2rem;
-    font-weight: 700;
-    color: #c27a32;
-    font-style: italic;
-}
-.navbar .navbar-logo span{
-    color: black;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1.4rem 7%;
+  background-color: rgba(1, 1, 1, 0.8);
+  border-bottom: 1px solid #513c28;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 9999;
 }
 
-.navbar .navbar-nav a{
-    color: #513c28;
-    display: inline-block;
-    font-size: 1.3rem;
-    margin: 0 1rem;
+.navbar .navbar-logo {
+  font-size: 2rem;
+  font-weight: 700;
+  color: #fff;
+  font-style: italic;
 }
-.navbar .navbar-nav a:hover{
-    color:#c27a32;
+
+.navbar .navbar-logo span {
+  color: var(--primary);
 }
-.navbar .navbar-nav a::after{
-    content: '';
-    display: block;
-    padding-bottom: 0.5rem ;
-    border-bottom: 0.1rem solid var(--primary);
-    transform: scaleX(0);
-    transition: 0.2s linear;
+
+.navbar .navbar-nav a {
+  color: #fff;
+  display: inline-block;
+  font-size: 1.3rem;
+  margin: 0 1rem;
 }
+
+.navbar .navbar-nav a:hover {
+  color: var(--primary);
+}
+
+.navbar .navbar-nav a::after {
+  content: '';
+  display: block;
+  padding-bottom: 0.5rem;
+  border-bottom: 0.1rem solid var(--primary);
+  transform: scaleX(0);
+  transition: 0.2s linear;
+}
+
 .navbar .navbar-nav a:hover::after {
-    transform: scaleX(0.5);
+  transform: scaleX(0.5);
 }
+
 .navbar .navbar-extra a {
-    color: var(--primary);
-    margin: 0 0.5rem;
-
-}
-.navbar .navbar-extra a:hover{
-    color: #513c28;
+  color: #fff;
+  margin: 0 0.5rem;
 }
 
-#hamburger-menu{
-    display: none;
-}
-/* navbar end */
-
-/* hero seksi start */
-.hero{
-    min-height: 700px;
-    display: flex;
-    align-items: center;
-    background-image: url('../img/bg1.jpeg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    position: relative;
-    -webkit-mask-image: linear-gradient(rgba(0, 0, 0, 1) 85%, rgba(0, 0, 0, 0));
-    mask-image: linear-gradient(rgba(0, 0, 0, 1) 85%, rgba(0, 0, 0, 0));
+.navbar .navbar-extra a:hover {
+  color: var(--primary);
 }
 
-.hero::after{
-    content:'';
-    display: block;
-    position: absolute;
-    width: 100%;
-    height: 20%;
-    bottom: 0;
-    background: linear-gradient(0deg, rgba(1, 1, 3, 1) 8%, rgba(255, 255, 255, 0) 50%);
+#hamburger-menu {
+  display: none;
+}
+
+/* Navbar search form */
+.navbar .search-form {
+  position: absolute;
+  top: 100%;
+  right: 7%;
+  background-color: #fff;
+  width: 50rem;
+  height: 5rem;
+  display: flex;
+  align-items: center;
+  transform: scaleY(0);
+  transform-origin: top;
+  transition: 0.3s;
+}
+
+.navbar .search-form.active {
+  transform: scaleY(1);
+}
+
+.navbar .search-form input {
+  height: 100%;
+  width: 100%;
+  font-size: 1.6rem;
+  color: var(--bg);
+  padding: 1rem;
+}
+
+.navbar .search-form label {
+  cursor: pointer;
+  font-size: 2rem;
+  margin-right: 1.5rem;
+  color: var(--bg);
+}
+.navbar img{
+  width: 70px;
+  height: 50px;
+  border-radius: 1000px;
+}
+/* Shopping Cart */
+.shopping-cart {
+  position: absolute;
+  top: 100%;
+  right: -100%;
+  height: 100vh;
+  width: 35rem;
+  padding: 0 1.5rem;
+  background-color: #fff;
+  color: var(--bg);
+  transition: 0.3s;
+}
+
+.shopping-cart.active {
+  right: 0;
+}
+
+.shopping-cart .cart-item {
+  margin: 2rem 0;
+  display: flex;
+  align-items: center;
+  gap: 1.5rem;
+  padding-bottom: 1rem;
+  border-bottom: 1px dashed #666;
+  position: relative;
+}
+
+.shopping-cart img {
+  height: 6rem;
+  border-radius: 50%;
+}
+
+.shopping-cart h3 {
+  font-size: 1.6rem;
+  padding-bottom: 0.5rem;
+}
+
+.shopping-cart .item-price {
+  font-size: 1.2rem;
+}
+
+.shopping-cart .remove-item {
+  position: absolute;
+  right: 1rem;
+  cursor: pointer;
+}
+
+.shopping-cart .remove-item:hover {
+  color: var(--primary);
+}
+
+/* Hero Section */
+.hero {
+  min-height: 700px;
+  display: flex;
+  align-items: center;
+  background-image: url('../img/bg1.jpeg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  -webkit-mask-image: linear-gradient(rgba(0, 0, 0, 1) 85%, rgba(0, 0, 0, 0));
+  mask-image: linear-gradient(rgba(0, 0, 0, 1) 85%, rgba(0, 0, 0, 0));
+}
+
+/* .hero::after {
+  content: '';
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 30%;
+  bottom: 0;
+  background: linear-gradient(0deg, rgba(1, 1, 3, 1) 8%, rgba(255, 255, 255, 0) 50%);
+} */
+
+.hero .mask-container {
+  position: absolute;
+  /* background: salmon; */
+  inset: 0;
+  -webkit-mask-image: url('../img/bg1.jpeg');
+  -webkit-mask-repeat: no-repeat;
+  -webkit-mask-size: cover;
+  -webkit-mask-position: center;
 }
 
 .hero .content {
-    padding: 1.4rem 7%;
-    max-width: 60rem;
-}
-.hero .content h1{
-    font-size: 5em;
-    color: #fff;
-    text-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
-    line-height: 1.2;
-}
-.hero .content h1 span{
-    color: #c27a32;
-}
-.hero .content p{
-    font-size: 1.6rem;
-    margin-top: 1rem;
-    margin-bottom: 2rem;
-    line-height: 1.4;
-    font-weight: 700;
-    text-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
-    color: #fff;
-    mix-blend-mode: difference;
-}
-.hero .content .cta{
-    margin-top:2rem;
-    display: 1rem;
-    padding: 1rem 3rem;
-    font-size: 1.4rem;
-    color: #fff;
-    background-color: var(--primary);
-    border-radius: 0.5rem;
-    box-shadow: 1px 1px 3px rgba(1,1,3,0.5);
-}
-/* end hero seksi */
-
-/* awal seksi tentang */
-.tentang {
-    padding: 6rem 7% 1.4rem;
-
-}
-.tentang h2,
-.menu h2{
-    text-align: center;
-    font-size: 2.6rem;
-    margin-bottom: 3rem;
-}
-.tentang h2 span,
-.menu span {
-    color: var(--primary);
+  padding: 1.4rem 7%;
+  /* max-width: 60rem; */
+  width: 100%;
+  text-align: center;
+  position: fixed;
+  top: 130px;
 }
 
-.tentang .row {
-    display: flex;
+.hero .content h1 {
+  font-size: 5em;
+  color: #fff;
+  text-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
+  line-height: 1.2;
 }
-.tentang .row .tentang-img {
-    flex: 1 1 45rem;
+
+.hero .content h1 span {
+  color: var(--primary);
 }
-.tentang .row .tentang-img img {
-    width: 100%;
-    margin: 10px;
-    border-radius: 5px;
-    -webkit-mask-image: linear-gradient(rgba(0, 0, 0, 1) 85%, rgba(0, 0, 0, 0));
-    mask-image: linear-gradient(rgba(0, 0, 0, 1) 85%, rgba(0, 0, 0, 0));
+
+.hero .content p {
+  color: var(--primary);
+  font-size: 1.6rem;
+  margin-top: 1rem;
+  line-height: 1.4;
+  font-weight: 700;
+  text-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
+  mix-blend-mode: difference;
 }
-.tentang .row .content {
-    flex: 1 1 35rem;
-    padding: 0 1rem;
-    text-align: center;
+
+.hero .content .cta, .menu a{
+  margin-top: 1rem;
+  display: inline-block;
+  padding: 1rem 3rem;
+  font-size: 1.4rem;
+  color: #fff;
+  background-color: var(--primary);
+  border-radius: 0.5rem;
+  box-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
 }
-.tentang .row .content h3{
-    font-size: 1.8rem;
-    padding: 0 1rem;
-    color: var(--primary);
+
+/* About Section */
+.about,
+.menu,
+.products,
+.contact {
+  padding: 8rem 7% 1.4rem;
 }
-.tentang .row .content p{
-    margin-bottom: 0.8rem;
-    font-size: 1.4rem;
-    font-weight: 400;
-    line-height: 1.6;
+
+.about h2,
+.menu h2,
+.products h2,
+.contact h2 {
+  text-align: center;
+  font-size: 2.6rem;
+  margin-bottom: 3rem;
 }
-/* end seksi tentang */
-/* menu seksi */
+
+.about h2 span,
+.menu h2 span,
+.products h2 span,
+.contact h2 span {
+  color: var(--primary);
+}
+
+.about .row {
+  display: flex;
+}
+
+.about .row .about-img {
+  flex: 1 1 45rem;
+}
+
+.about .row .about-img img {
+  width: 100%;
+  
+}
+
+.about .row .content {
+  flex: 1 1 35rem;
+  padding: 0 1rem;
+}
+
+.about .row .content h3 {
+  font-size: 1.8rem;
+  margin-bottom: 1rem;
+}
+
+.about .row .content p {
+  margin-bottom: 0.8rem;
+  font-size: 1.3rem;
+  font-weight: 500;
+  line-height: 1.6;
+}
+
+/* Menu Section */
+.menu h2,
+.products h2,
+.contact h2 {
+  margin-bottom: 1rem;
+}
+.menu p,
+.products p,
+.contact p {
+  text-align: center;
+  max-width: 30rem;
+  margin: auto;
+  font-weight: 500;
+  line-height: 1.6;
+}
+
 .menu .row {
-    display: flex;
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 5rem;
+  justify-content: center;
 }
-.menu .row .menu-img {
-    flex: 1 1 45rem;
+
+.menu .row .menu-card {
+  text-align: center;
+  padding-bottom: 4rem;
 }
-.menu .row .menu-img {
-    flex: 1 1 45rem;
+
+.menu .row .menu-card img {
+  border-radius: 50%;
+  width: 80%;
+  height: 150px;
 }
-.menu .row .menu-img img {
-    width: 100%;
-    height:600px;
-    margin: 10px;
-    border-radius: 5px;
-    -webkit-mask-image: linear-gradient(rgba(0, 0, 0, 1) 85%, rgba(0, 0, 0, 0));
-    mask-image: linear-gradient(rgba(0, 0, 0, 1) 85%, rgba(0, 0, 0, 0));
+
+.menu .row .menu-card .menu-card-title {
+  margin: 1rem auto 0.5rem;
 }
-.menu .row .content {
-    flex: 1 1 35rem;
-    padding: 0 1rem;
-    text-align: center;
-}
-.menu .row .content h3{
-    font-size: 1.8rem;
-    padding: 0 1rem;
-    color: var(--primary);
-}
-.menu .row .content p{
-    margin-bottom: 0.8rem;
-    font-size: 1.4rem;
-    font-weight: 400;
-    line-height: 1.6;
-}
-.row .content .cta{
-    margin-top:2rem;
-    margin-bottom: 2rem;
-    display: 1rem;
-    padding: 1rem 3rem;
-    font-size: 1.4rem;
-    color: #fff;
-    background-color: var(--primary);
-    border-radius: 0.5rem;
-    box-shadow: 1px 1px 3px rgba(1,1,3,0.5);
-}
-/* end menu */
 
 /* Products Section */
 .products .row {
@@ -244,7 +359,6 @@ body{
   display: flex;
   justify-content: center;
   gap: 0.5rem;
-  background-color: var(--primary);
 }
 
 .products .product-icons a {
@@ -274,7 +388,6 @@ body{
 
 .products .product-content h3 {
   font-size: 2rem;
-  color: black;
 }
 
 .products .product-stars {
@@ -296,9 +409,93 @@ body{
   text-decoration: line-through;
   font-weight: lighter;
   font-size: 1rem;
-  color: var(--primary);
 }
 
+/* Contact Section */
+.contact .row {
+  display: flex;
+  margin-top: 2rem;
+  background-color: #222;
+}
+
+.contact .row .map {
+  flex: 1 1 45rem;
+  width: 100%;
+  object-fit: cover;
+}
+
+.contact .row form {
+  flex: 1 1 45rem;
+  padding: 5rem 2rem;
+  text-align: center;
+}
+
+.contact .row form .input-group {
+  display: flex;
+  align-items: center;
+  margin-top: 2rem;
+  background-color: var(--bg);
+  border: 1px solid #eee;
+  padding-left: 2rem;
+}
+
+.contact .row form .input-group input {
+  width: 100%;
+  padding: 2rem;
+  font-size: 1.7rem;
+  background: none;
+  color: #fff;
+}
+
+.contact .row form .btn {
+  margin-top: 3rem;
+  display: inline-block;
+  padding: 1rem 3rem;
+  font-size: 1.7rem;
+  color: #fff;
+  background-color: var(--primary);
+  cursor: pointer;
+}
+
+/* Footer */
+footer {
+  background-color: var(--primary);
+  text-align: center;
+  padding: 1rem 0 3rem;
+  margin-top: 3rem;
+}
+
+footer .socials {
+  padding: 1rem 0;
+}
+
+footer .socials a {
+  color: #fff;
+  margin: 1rem;
+}
+
+footer .socials a:hover,
+footer .links a:hover {
+  color: var(--bg);
+}
+
+footer .links {
+  margin-bottom: 1.4rem;
+}
+
+footer .links a {
+  color: #fff;
+  padding: 0.7rem 1rem;
+}
+
+footer .credit {
+  font-size: 0.8rem;
+}
+
+footer .credit a {
+  color: var(--bg);
+  font-weight: 700;
+}
 
 /* Modal Box */
 /* Item Detail */
@@ -309,7 +506,7 @@ body{
   left: 0;
   top: 0;
   width: 100%;
-  height: 100%;
+  height: 80%;
   overflow: auto;
   background-color: rgba(0, 0, 0, 0.7);
 }
